[package]
name = "sps30-async"
authors = ["David Kleingeld <open-source@davidsk.dev>"]
categories = ["no-std"]
description = "Async driver for Sensirion SPS30 Particulate Matter Sensor"
documentation = "https://docs.rs/sps30-async"
keywords = ["Sensirion", "SPS30"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dvdsk/sps30.git"
version = "0.2.0"
edition = "2021"

[features]
thiserror = ["dep:thiserror"]
serde = ["dep:serde"]
# derive's MaxSize on Error enum
postcard = ["dep:postcard"]

[dependencies]
defmt = "0.3"
thiserror = { version = "1.0.38", optional = true }
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
postcard = { version = "1.0.8", features = ["experimental-derive"], optional = true }
heapless = { version = "0.8" }

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
futures = { version = "0.3.30", default-features = false }

[dev-dependencies]
futures = "0.3.30"
